# BidParser

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BidParser.sln  BidParserLite.sln  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  Dockerfile  METRICS_PLAN.md  MSSQL_MIGRATION_PLAN.md  REFACTOR_PLAN.md  audit.md  docker-compose.yml  hp_bid_plan.md  lenovo_brda_dcg_plan.md  skills-lock.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_user_name.py  0003_user_defaults.py  0004_remove_fx_rate_peg.py
backend/app/: __init__.py  config.py  db.py  main.py  models.py  storage.py
backend/app/api/: routes_auth.py  routes_me.py  routes_parse.py  routes_users.py  schemas.py
backend/app/auth/: deps.py  passwords.py  rate_limit.py  sessions.py
backend/app/output/: __init__.py  template_writer.py
backend/app/parsers/: __init__.py  base.py  cleaning.py  pdf_utils.py  registry.py  xlsx_utils.py
backend/app/parsers/nutanix_hardware_only_pdf/: __init__.py  parser.py
backend/app/parsers/nutanix_hardware_only_xlsx/: __init__.py  parser.py
backend/app/parsers/nutanix_renewal_pdf/: __init__.py  parser.py
backend/app/parsers/nutanix_software_only_pdf/: __init__.py  parser.py
backend/app/parsers/nutanix_software_only_xlsx/: __init__.py  parser.py
backend/app/services/: fx_rates.py  parse_service.py  retention.py
backend/tests/: test_fx_rates.py  test_parsers.py  test_phase2_api.py  test_template_writer.py
backend/tests/fixtures/: XQ-4076249.xlsx  XQ-4108785.xlsx
(+292 files in other folders)
