[project]
name = "bidparser-backend"
version = "0.1.0"
description = "Nutanix quote parser backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "bcrypt>=4.1",
  "fastapi>=0.115",
  "httpx>=0.27",
  "itsdangerous>=2.2",
  "openpyxl>=3.1",
  "pdfplumber>=0.11",
  "pydantic>=2.8",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
